# latency_under_load

./: .gitignore  Makefile  README.md
apps/async_app/: Dockerfile  pyproject.toml
apps/async_app/async_app/: db.py  main.py  metrics.py
apps/shared/: config.py
apps/sync_app/: Dockerfile  pyproject.toml
apps/sync_app/sync_app/: db.py  main.py
docs/: architecture.md  experiment-design.md  kpi-definitions.md  lessons-learned.md  results-analysis.md
infra/docker/: docker-compose.yml
infra/docker/grafana/: datasources.yaml
infra/docker/grafana/dashboards/: app-performance.json  provider.yaml
infra/docker/pgbouncer/: pgbouncer.ini
infra/docker/prometheus/: prometheus.yml
load-test/k6/: base.js  config.js
load-test/k6/runners/: run_all.sh  run_async.sh  run_sync.sh
load-test/k6/scenarios/: burst.js  connection_hold.js  io_bound.js  stress_test.js
scripts/: extract_metrics.py  plot_graph.py  run_benchmarks.sh
scripts/async/: uvicorn_1.sh  uvicorn_4.sh
scripts/sync/: gunicorn_1.sh  gunicorn_4.sh  gunicorn_threads.sh
