[tool.poetry]
name = "async-app"
version = "0.1.0"
description = "Async DB benchmark app (non-blocking)"
authors = ["Khushal Singh Chauhan <khushal@techtootle.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
asyncpg = "^0.31.0"
prometheus-client = "^0.25.0"
python-dotenv = "^1.2.2"
uvloop = "^0.22.1"
httptools = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"