[tool.poetry]
name = "sync-app"
version = "0.1.0"
description = "Sync DB benchmark app (blocking)"
authors = ["Khushal Singh Chauhan <khushal@techtootle.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
psycopg2-binary = "^2.9.12"
prometheus-client = "^0.25.0"
python-dotenv = "^1.2.2"
gunicorn = "^25.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"